--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "src/index.js",
   "dependencies": {
     "react": "17.0.1",
+    "react-bootstrap": "1.5.0",
     "react-dom": "17.0.1",
     "react-scripts": "4.0.0"
   },
